# Wuwa_Mod_Fixer_Fork

./: Cargo.toml  config.json  config.yml
scripts/: compile_config.js
src-core/src/: config_loader.rs  mod_fixer.rs
src-tauri/: tauri.conf.json
