[workspace]
members = [
    "src-core",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "3.5.0"
edition = "2024"
license = "GPL-3.0"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
log         = "0.4"
regex       = "1.5"
walkdir     = "2.3"
tokio       = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
semver      = "1"
chrono      = "0.4"
once_cell   = "1"
lazy_static = "1.4"
backtrace   = "0.3"
futures     = "0.3"
arc-swap    = "1"
thiserror   = "2"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "brotli", "gzip"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
